--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue-clerk": "^0.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
